[gd_scene load_steps=22 format=2]

[ext_resource path="res://scenes/chessBoard.gd" type="Script" id=1]
[ext_resource path="res://scenes/pieces/king.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/gameOverControl.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/stageFinishedControl.tscn" type="PackedScene" id=4]
[ext_resource path="res://resources/Fonts/m3x6.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://resources/tilesetNew.tres" type="TileSet" id=6]
[ext_resource path="res://resources/Sprites/TilesTargets_20x20.png" type="Texture" id=7]
[ext_resource path="res://resources/Fonts/mago1.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://resources/Sprites/Pieces_17x17.png" type="Texture" id=9]
[ext_resource path="res://scenes/rootDebug.gd" type="Script" id=10]
[ext_resource path="res://scenes/player.gd" type="Script" id=11]
[ext_resource path="res://scenes/pieces/spikes.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/levels/1.tscn" type="PackedScene" id=14]
[ext_resource path="res://resources/buttons/focusHover.tres" type="StyleBox" id=15]
[ext_resource path="res://resources/buttons/normal.tres" type="StyleBox" id=16]
[ext_resource path="res://resources/buttons/pressed.tres" type="StyleBox" id=17]
[ext_resource path="res://resources/buttons/disabled.tres" type="StyleBox" id=18]
[ext_resource path="res://resources/Sprites/banner.png" type="Texture" id=19]

[sub_resource type="GDScript" id=1]
script/source = "extends MarginContainer


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	$button.connect(\"pressed\",global,'playMusic')
"

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 5 )

[node name="rootDebug" type="Node"]
script = ExtResource( 10 )
nextLevel = ExtResource( 14 )

[node name="controLayer" type="CanvasLayer" parent="."]
layer = 5

[node name="gameOverControl" parent="controLayer" instance=ExtResource( 3 )]

[node name="stageFinishedControl" parent="controLayer" instance=ExtResource( 4 )]
margin_top = -140.0
margin_bottom = -140.0

[node name="banner" type="Control" parent="controLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="marginContainer" type="MarginContainer" parent="controLayer/banner"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 30
script = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button" type="Button" parent="controLayer/banner/marginContainer"]
margin_left = 46.0
margin_top = 110.0
margin_right = 114.0
margin_bottom = 130.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 8
custom_styles/hover = ExtResource( 15 )
custom_styles/pressed = ExtResource( 17 )
custom_styles/focus = ExtResource( 15 )
custom_styles/disabled = ExtResource( 18 )
custom_styles/normal = ExtResource( 16 )
custom_fonts/font = SubResource( 2 )
text = "Start game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="controLayer/banner"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 80.0
margin_top = 80.0
margin_right = 80.0
margin_bottom = 80.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.92549, 0.839216, 1 )
text = "by Escada Games"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="root2d" type="Node2D" parent="."]

[node name="tileMapBoard" type="TileMap" parent="root2d"]
modulate = Color( 0.738281, 0.738281, 0.738281, 1 )
tile_set = ExtResource( 6 )
cell_size = Vector2( 20, 20 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 1, 0, 2, 0, 0, 3, 1, 0, 4, 0, 0, 5, 1, 0, 6, 0, 0, 7, 1, 0, 65536, 1, 0, 65537, 0, 0, 65538, 1, 0, 65539, 0, 0, 65540, 1, 0, 65541, 0, 0, 65542, 1, 0, 65543, 0, 0, 131072, 0, 0, 131073, 1, 0, 131074, 0, 0, 131075, 1, 0, 131076, 0, 0, 131077, 1, 0, 131078, 0, 0, 131079, 1, 0, 196608, 1, 0, 196609, 0, 0, 196610, 1, 0, 196611, 0, 0, 196612, 1, 0, 196613, 0, 0, 196614, 1, 0, 196615, 0, 0, 262144, 0, 0, 262145, 1, 0, 262146, 0, 0, 262147, 1, 0, 262148, 0, 0, 262149, 1, 0, 262150, 0, 0, 262151, 1, 0, 327680, 1, 0, 327681, 0, 0, 327682, 1, 0, 327683, 0, 0, 327684, 1, 0, 327685, 0, 0, 327686, 1, 0, 327687, 0, 0, 393216, 0, 0, 393217, 1, 0, 393218, 0, 0, 393219, 1, 0, 393220, 0, 0, 393221, 1, 0, 393222, 0, 0, 393223, 1, 0, 458752, 1, 0, 458753, 0, 0, 458754, 1, 0, 458755, 0, 0, 458756, 1, 0, 458757, 0, 0, 458758, 1, 0, 458759, 0, 0 )

[node name="tileMap" type="TileMap" parent="root2d"]
visible = false
cell_size = Vector2( 20, 20 )
format = 1
script = ExtResource( 1 )
tilesTarget = ExtResource( 7 )

[node name="twn" type="Tween" parent="root2d/tileMap"]

[node name="twnMove" type="Tween" parent="root2d/tileMap"]

[node name="twnColor" type="Tween" parent="root2d/tileMap"]

[node name="twnDotRadius" type="Tween" parent="root2d/tileMap"]

[node name="king" parent="root2d/tileMap" instance=ExtResource( 2 )]
visible = false
position = Vector2( 80, 40 )

[node name="player" type="Sprite" parent="root2d/tileMap" groups=[
"Player",
]]
visible = false
position = Vector2( 40, 20 )
z_index = 10
texture = ExtResource( 9 )
centered = false
offset = Vector2( 1.5, 1.5 )
hframes = 6
script = ExtResource( 11 )

[node name="spikes" parent="." instance=ExtResource( 13 )]
scale = Vector2( 8, 8 )

[node name="banner" type="Sprite" parent="."]
position = Vector2( 80, 60 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 19 )
[connection signal="pressed" from="controLayer/banner/marginContainer/button" to="controLayer/stageFinishedControl" method="nextStage"]
